package PaooGame.Tiles;

import PaooGame.Graphics.Assets;

public class AirTile extends Tile
{

    public AirTile(int id)
    {
        /// Apel al constructorului clasei de baza
        super(Assets.air, id);
    }
}
