@startuml

title __PAOOGAMEETAPA1's Class Diagram__\n

  namespace PaooGame {
    namespace Animation {
      class PaooGame.Animation.Animation {
      }
    }
  }
  

  namespace PaooGame {
    namespace Camera {
      class PaooGame.Camera.Camera {
      }
    }
  }
  

  namespace PaooGame {
    class PaooGame.Game {
    }
  }
  

  namespace PaooGame {
    namespace GameWindow {
      class PaooGame.GameWindow.GameWindow {
      }
    }
  }
  

  namespace PaooGame {
    namespace Graphics {
      class PaooGame.Graphics.Assets {
      }
    }
  }
  

  namespace PaooGame {
    namespace Graphics {
      class PaooGame.Graphics.ImageLoader {
      }
    }
  }
  

  namespace PaooGame {
    namespace Graphics {
      class PaooGame.Graphics.SpriteSheet {
      }
    }
  }
  

  namespace PaooGame {
    namespace Input {
      class PaooGame.Input.KeyManager {
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      abstract class PaooGame.Items.Character {
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.CharacterFactory {
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.Hero {
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      abstract class PaooGame.Items.Item {
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.Monster {
      }
    }
  }
  

  namespace PaooGame {
    class PaooGame.Main {
    }
  }
  

  namespace PaooGame {
    namespace Maps {
      class PaooGame.Maps.Map {
      }
    }
  }
  

  namespace PaooGame {
    class PaooGame.RefLinks {
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.AboutState {
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.MenuState {
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.PlayState {
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.SettingsState {
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      abstract class PaooGame.States.State {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.AirTile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.GrassTile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.MountainTile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.SoilTile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.Tile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.TreeTile {
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.WaterTile {
      }
    }
  }
  

  PaooGame.Camera.Camera o-- PaooGame.RefLinks : refLink
  PaooGame.Game .up.|> java.lang.Runnable
  PaooGame.Game o-- PaooGame.States.AboutState : aboutState
  PaooGame.Game o-- PaooGame.Camera.Camera : camera
  PaooGame.Game o-- PaooGame.Input.KeyManager : keyManager
  PaooGame.Game o-- PaooGame.States.MenuState : menuState
  PaooGame.Game o-- PaooGame.States.PlayState : playState
  PaooGame.Game o-- PaooGame.RefLinks : refLink
  PaooGame.Game o-- PaooGame.States.SettingsState : settingsState
  PaooGame.Game o-- PaooGame.Tiles.Tile : tile
  PaooGame.Game o-- PaooGame.GameWindow.GameWindow : wnd
  PaooGame.Input.KeyManager .up.|> java.awt.event.KeyListener
  PaooGame.Items.Character -up-|> PaooGame.Items.Item
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : idleLeft
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : idleRight
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : runLeft
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : runRight
  PaooGame.Items.Hero -up-|> PaooGame.Items.Character
  PaooGame.Items.Hero o-- PaooGame.Animation.Animation : attackLeft
  PaooGame.Items.Hero o-- PaooGame.Animation.Animation : attackRight
  PaooGame.Items.Item o-- PaooGame.RefLinks : refLink
  PaooGame.Items.Monster -up-|> PaooGame.Items.Character
  PaooGame.Maps.Map o-- PaooGame.RefLinks : refLink
  PaooGame.RefLinks o-- PaooGame.Game : game
  PaooGame.RefLinks o-- PaooGame.Maps.Map : map
  PaooGame.States.AboutState -up-|> PaooGame.States.State
  PaooGame.States.MenuState -up-|> PaooGame.States.State
  PaooGame.States.PlayState -up-|> PaooGame.States.State
  PaooGame.States.PlayState o-- PaooGame.Items.Character : hero
  PaooGame.States.PlayState o-- PaooGame.Maps.Map : map
  PaooGame.States.SettingsState -up-|> PaooGame.States.State
  PaooGame.States.State o-- PaooGame.RefLinks : refLink
  PaooGame.Tiles.AirTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.GrassTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.MountainTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.SoilTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.TreeTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.WaterTile -up-|> PaooGame.Tiles.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
